--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -19,6 +19,10 @@ $hover-color: #5AC5FF;
 $link-color: #FFF;
 $nav-height: 40px;
 
+body {
+  font-family: $helvetica;
+}
+
 a {
   color: $link-color;
   text-decoration: none;
@@ -46,4 +50,41 @@ a {
 
 .content {
   @include outer-container;
+  padding-top: 10px;
+
+  section {
+    @include span-columns(4);
+    @include omega(3n);
+    box-shadow: 0 0 4px #ccc;
+    border: 1px solid #ccc;
+
+    &:hover {
+      box-shadow: inset 0 0 2px #ccc, 0 0 4px #ccc;
+    }
+
+    h1 {
+      padding: 0 10px 10px;
+      border-bottom: 1px solid #ccc;
+      text-transform: uppercase;
+      font-weight: 200;
+      font-size: 12pt;
+      text-align: left;
+    }
+
+    h2 {
+      line-height: 42pt;
+      padding: 10px;
+
+      .big-number {
+      float: right;
+        font-weight: 100;
+        font-size: 42pt;
+      }
+
+      .description {
+      float: right;
+        font-weight: 400;
+      }
+    }
+  }
 }
