Added the megacard to dashboard

--- a/app/views/dashboard/index.html.haml
+++ b/app/views/dashboard/index.html.haml
@@ -3,5 +3,14 @@
   %h2
     .description
       users
+    .graph
     .big-number
       =@presenter.users.count
+%section
+  %h1 Links
+  %h2
+    .description
+      links updated today
+    .graph
+    .big-number
+      =@presenter.updated_today
