--- a/app/views/dashboard/index.html.haml
+++ b/app/views/dashboard/index.html.haml
@@ -7,10 +7,10 @@
     .big-number
       =@presenter.users.count
 %section
-  %h1 Links
+  %h1 Unimedia
   %h2
     .description
       links updated today
     .graph
     .big-number
-      =@presenter.updated_today
+      =@presenter.updated_unimedia
