Added sidekiq views

--- a/app/views/layouts/inside.html.erb
+++ b/app/views/layouts/inside.html.erb
@@ -13,6 +13,7 @@
       <li><a href="#">Articles</a></li>
       <li><a href="#">Users</a></li>
       <li><a href="#">Pages</a></li>
+      <li><a href="/sidekiq">Sidekiq</a></li>
     </ul>
   </div>
   <div class="content">
