Added attempts to dashboard

--- a/app/views/dashboard/index.html.haml
+++ b/app/views/dashboard/index.html.haml
@@ -13,4 +13,4 @@
       links updated today
     .graph
     .big-number
-      =@presenter.updated_unimedia
+      #{@presenter.updated_unimedia} / #{@presenter.attempted_unimedia}
