Fixed presenter error

--- a/app/views/dashboard/index.html.haml
+++ b/app/views/dashboard/index.html.haml
@@ -10,7 +10,7 @@
   %h1 Unimedia
   %h2
     .description
-      links updated today
+      links
     .graph
     .big-number
-      #{@presenter.updated_unimedia} / #{@presenter.attempted_unimedia}
+      #{@presenter.updated_unimedia}/#{@presenter.attempted_unimedia}
